# KairoEngineCore

./: Application.cppm  CMakeLists.txt  Components.cppm  CoreDiagnostics.cppm  CoreReflection.cppm  Entity.cppm  Event.cppm  Input.cppm  InputMap.cppm  JobSystem.cppm  KairoEngineCore.cppm  Layer.cppm  Logger.cppm  LogicArtifact.cppm  LogicBytecode.cppm  ProjectDescriptor.cppm  README.md  RuntimeComponents.cppm  Scene.cppm  SceneSerialization.cppm  TextFormat.cppm  TextValidation.cppm  Time.cppm
tests/: EngineCoreTests.cpp
